# AdventOfCode_2025

./: .gitignore  AOC_TEMPLATE.py  AOC_TEMPLATE.rs  Cargo.toml  README.md  RUN_EVERY_DAY.py
.github/: dependabot.yml
Day_01/: Solution_01.py  day01.rs  instructions-one.md  instructions-two.md
Day_02/: Solution_02.py  day02.rs  instructions-one.md  instructions-two.md
scripts/: new_day.sh
src/: lib.rs
